added getElementbyID to write to page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="card-body">
                             <h2 class="card-title">Generate a Password</h2>
                             <hr/>
-                            <p class="card-text wrap-text">Your Secure Password</p>
+                            <p id="password" class="card-text wrap-text">Your Secure Password</p>
                             <hr/>
                         </div>
                         <div class="card-body d-flex justify-content-around">
