generate password button refreshes page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <hr/>
                         </div>
                         <div class="card-body d-flex justify-content-around">
-                            <a href="#" class="card-link"><button type="button" class="btn btn-danger"><h3>Generate Password</h3></button></a>
+                            <input type="button" value="Generate Password" onClick="window.location.reload();" class="btn btn-danger">
                             <a href="#" class="card-link"><button type="button" class="btn btn-light"><h3>Copy to Clipboard</h3></button></a>
                         </div>
                     </div>
@@ -40,16 +40,7 @@
         </div>
 
         <script type="text/javascript" src="js/passwordGenerator.js"></script>
-      
-
-
-
-
-
-
-
-
-  
+    
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
